aligned blocks into even grid, moved grid to center.

--- a/style.css
+++ b/style.css
@@ -1,16 +1,22 @@
+body {
+    background-color: darkgrey;
+}
 .div-block {
-    width: 10px;
-    height: 10px;
+    display: flex;
+    width: 50px;
+    height: 50px;
     background-color: black;
-    margin: 6px;
+    margin: 6px;;
+    flex: 0 0 1;
 }
 
 #container {
     background-color: darkgrey;
+    justify-self: center;
     display: flex;
-    flex-flow: row wrap;
-    /* flex: 1 0 6.25%; */
+    flex-wrap: wrap;
+    flex: 0 0 1;
     /*  max content width 6.25% maybe something along this line */
-    /* max-width: 352px;
-    max-height: 352px; /* easy but wrong */ 
+    max-width: 992px;
+    max-height: 992px; /* easy but wrong. I CAN FIND NO OTHER WAY WTF!!! */ 
 }
