--- a/style.css
+++ b/style.css
@@ -6,22 +6,36 @@ also change contain from id to class maybe */
 
 } */
 
+/* IDEA make it so all css properties are changed within js and change 
+property values to the corresponding needs. example: change :nth-child(16n + 1) 
+js loop conditional i < 257 to (21n + 1) and i < 442 */
+
+
+/* remove as much css as possible and make put everythig in relation to the grid in
+js and connect to a slider */
 #eas-content {
+    display: flex;
     justify-self: center;
     max-height: 960px;
     max-width: 960px;
-    display: flex;
     flex-flow: row wrap;
-    border: 10px;
-    border-color: black;
+    justify-content: center;
 }
 
 .rgb-square {
-box-sizing: border-box;
-width: 10px;
-height: 10px;
-border: solid .5px;
-border-color: black;
+    min-width: 0;
+    min-height: 0;
+    box-sizing: border-box;
+    width: 64px;
+    height: 64px;
+    border: solid .25px;
+    border-color: black;
+}
+
+.rgb-square:nth-child(16n + 1) {
+    width: 100%;
+    border: 0;
+    height: 0;
 }
 
 #btn-prompter {
