--- a/style.css
+++ b/style.css
@@ -2,9 +2,7 @@
 also change contain from id to class maybe */
 /* make it so every 16 paintable-divs it wraps? */
 /* Now to correctly size divs and make shrink and grow properly */
-/* #eas-container {
 
-} */
 
 /* IDEA make it so all css properties are changed within js and change 
 property values to the corresponding needs. example: change :nth-child(16n + 1) 
@@ -13,6 +11,8 @@ js loop conditional i < 257 to (21n + 1) and i < 442 */
 
 /* remove as much css as possible and make put everythig in relation to the grid in
 js and connect to a slider */
+
+
 #eas-content {
     display: flex;
     justify-self: center;
@@ -22,6 +22,10 @@ js and connect to a slider */
     justify-content: center;
 }
 
+#eas-border {
+    display: flex;
+    border: 12px solid black;
+}
 .rgb-square {
     min-width: 0;
     min-height: 0;
