--- a/style.css
+++ b/style.css
@@ -1,9 +1,4 @@
-/* Just going to reset it. and individually go through each css property.
-also change contain from id to class maybe */
-/* make it so every 16 paintable-divs it wraps? */
-/* Now to correctly size divs and make shrink and grow properly */
-
-
+/* also change contain from id to class maybe */
 /* IDEA make it so all css properties are changed within js and change 
 property values to the corresponding needs. example: change :nth-child(16n + 1) 
 js loop conditional i < 257 to (21n + 1) and i < 442 */
@@ -12,47 +7,35 @@ js loop conditional i < 257 to (21n + 1) and i < 442 */
 /* remove as much css as possible and make put everythig in relation to the grid in
 js and connect to a slider */
 
-
 #eas-content {
     display: flex;
-    justify-self: center;
-    max-height: 960px;
-    max-width: 960px;
-    flex-flow: row wrap;
-    justify-content: center;
-}
+    flex-basis: fit-content;
+    flex-wrap: wrap;
+    max-width: 880px;
+    border: solid black 3px
+  }
+  .rgb-square {
+    background-color: white;
+    width: 55px;
+    height: 55px;
+  }
 
-#eas-border {
+    .btn-tray {
+        display: flex;
+    }
+
+.g-reset {
     display: flex;
-    border: 12px solid black;
-}
-.rgb-square {
-    min-width: 0;
-    min-height: 0;
-    box-sizing: border-box;
-    width: 64px;
-    height: 64px;
-    border: solid .25px;
-    border-color: black;
-}
-
-.rgb-square:nth-child(16n + 1) {
-    width: 100%;
-    border: 0;
-    height: 0;
-}
-
-#btn-prompter {
-    display: flex;
-    width: 250px;
-    height: 50px;
+    width: 66px;
+    height: 66px;
     justify-self: center;
     justify-content: center;
     align-items: center;
     margin: 16px;
-    border-radius: 8px;
+    border-radius: 33%;
+    margin: 8px;
 }
 
-#btn-prompter:hover {
+.g-reset:hover {
     background-color: grey;
 }
